# Port26

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
backend/endpoints/: __init__.py  interpolation.py  sensors.py
backend/schemas/: __init__.py  interpolation.py  sensor.py
backend/services/: __init__.py  metrics_service.py  sensor_readings_service.py  sensor_service.py
backend/services/grid/: __init__.py  geo.py  grid_builder.py  models.py
backend/sql/: 001_create_sensors_table.sql  002_populate_helsinki_sensors.sql  003_populate_espoo_sensors.sql  004_add_enabled_column.sql  005_create_sensor_readings_table.sql  006_sync_latest_fields_from_readings.sql  007_create_metrics_table.sql
backend/tests/: test_interpolation_masking.py  test_interpolation_metrics_endpoint.py  test_interpolation_timeline.py  test_sensor_history_endpoint.py
sim/: LICENSE  PLOTTING.md  README.md  USAGE.md  __init__.py  common.py  config.py  config.toml  project.toml  project_better_temperature.toml  pyproject.toml  visualize_pipeline.py  visualize_validation.py
sim/data_in/: __init__.py  download_training_data.py  fmi_fetcher.py  ifs_snapshot.py
sim/inference/: __init__.py  map_plots.py  run_downscaling.py  run_inference_and_map.py
sim/models/: __init__.py  physics.py  train_xgboost.py
sim/preprocess/: __init__.py  build_dataset.py
sim/workflows/: __init__.py  common.py  fetch_data.py  plot_maps.py  run_demo.py  run_ifs_snapshot.py  run_inference_request.py  train_model.py
(+59 files in other folders)
