[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pytest>=8.4.2",
    "pydantic-settings>=2.8.1",
    "supabase>=2.12.0",
    "tzdata>=2025.2",
    "uvicorn>=0.34.0",
]
